<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Gauguin</string>

    <string name="menu_new">New Game</string>
    <string name="menu_load">Load</string>
    <string name="menu_save">Save</string>
    <string name="menu_restart_game">Restart Game</string>
    <string name="menu_stats">Statistics</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_issues">Bugs and Features</string>

    <string name="menu_show_mistakes">Show mistakes</string>
    <string name="menu_reveal_cell">Reveal cell</string>
    <string name="menu_reveal_cage">Reveal cage</string>
    <string name="menu_show_solution">Show solution</string>

    <string name="dialog_title_load">Load Game</string>

    <string name="puzzle_solved">Puzzle solved!</string>
    <string name="puzzle_record_time">New best time - </string>

    <string name="time_zero" translatable="false">00:00:00</string>
    <string name="save_games_empty">No save games found</string>

    <string name="settings_group_assistance">Game Assistance</string>
    <string name="setting_flag_bad_maths_title">Highlight incorrect maths</string>
    <string name="setting_flag_duplicates_title">Highlight duplicates</string>
    <string name="setting_remove_pencils_title">Auto-remove pencil marks</string>
    <string name="setting_remove_pencils_summary">In the same row or column as a penned number</string>

    <string name="settings_group_display">Display</string>
    <string name="setting_theme_title">Theme</string>
    <string name="setting_pencil_at_start_title">Pencil marks at game start</string>
    <string name="setting_pencil_3x3_title">Pencil marks in 3x3 grid</string>
    <string name="setting_pencil_3x3_summary_on">Show in 3x3 grid</string>
    <string name="setting_pencil_3x3_summary_off">Show in numerical order instead</string>
    <string name="setting_show_timer_title">Show game timer</string>
    <string name="setting_show_fullscreen_title">Show full screen</string>
    <string name="setting_keep_screen_on_title">Keep screen on</string>

    <string name="stats_group_title">Statistics</string>
    <string name="stats_puzzles_title">Puzzle Statistics</string>
    <string name="stats_puzzles_started">Puzzles started</string>
    <string name="stats_puzzles_hinted">Puzzles hinted</string>
    <string name="stats_puzzles_solved">Puzzles solved</string>
    <string name="stats_puzzles_solved_streak">Current streak</string>
    <string name="stats_puzzles_longest_streak">Longest streak</string>
    <string name="stats_clear">Reset statistics</string>

    <string name="help_section_title">Help</string>
    <string name="help_rules_title">Rules</string>
    <string name="help_rules_summary">Fill in each row and column with the available numbers. Numbers may only be used once per row and column.\n\nThick lines indicate \'cages\', where each cage has a math puzzle to be solved. For example, \'5+\' means all numbers in that cage must add up to 5.\n\nNumbers may be used more than once per cage, as long as there is only one of each number per row or column.</string>
    <string name="help_instructions_title">How to play</string>
    <string name="help_instructions_summary">"Fill up the grid cells using the number buttons. To enter a number to the selected cell, long-press the number button. To add or remove a possible number, just press the number button.\n\nUse the question mark to see if there are any mistakes in the filled cells.\n\nGauguin will auto-save your game if you need to stop.\n    "</string>

    <string name="about_section_title">About</string>
    <string name="about_version_title">Version</string>
    <string name="about_version_name" translatable="false">@string/versionName</string>
    <string name="about_license_title">License</string>
    <string name="about_license_summary">GNU General Public License v3</string>
    <string name="about_website_title">Project Home</string>
    <string name="about_website_summary">Report any bugs or suggestions at <a href="https://github.com/meikpiep/gauguin">https://github.com/meikpiep/gauguin</a></string>
    <string name="about_developers_title">Developer</string>
    <string name="about_developers_summary">Meik Piepmeyer\n \nForked from HoloKenMod 1.6.1 by Adam Queler\n\nForked from Holoken 1.1.1 by Amanda Chow, with much credit to Ben Buxton and Stephen Lee of Mathdoku</string>
    <string name="about_changelog_title">Changelog</string>
    <string name="about_changelog_summary">See <a href="https://github.com/meikpiep/gauguin/releases">https://github.com/meikpiep/gauguin/releases</a></string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_restart_title">Restart game?</string>
    <string name="dialog_restart_msg">This game will be restarted</string>
    <string name="dialog_delete_title">Delete game?</string>
    <string name="dialog_delete_msg">This game will be deleted</string>
    <string name="dialog_delete_all_title">Delete all games?</string>
    <string name="dialog_delete_all_msg">All games will be deleted</string>

    <string name="toast_cheated">This puzzle is hard eh</string>
    <string name="simulate_game_solved">Simulate game solved</string>
    <string name="difficulty_label">Difficulty</string>
    <string name="single_cells_usage_label">Single cells</string>
    <string name="operations_label">Operations</string>
    <string name="digits_label">Digits</string>
    <string name="show_operators_toggle">Show operators</string>
    <string name="difficulty_any">Any</string>
    <string name="difficulty_very_easy">Very Easy</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_hard">Hard</string>
    <string name="difficulty_extreme">Very hard</string>
    <string name="single_cages_fixed_number">Fixed number</string>
    <string name="single_cages_no_singles">No singles</string>
    <string name="single_cages_dynamic">Dynamic</string>
    <string name="operations_all">+ - * /</string>
    <string name="operations_addition_substraction">+ -</string>
    <string name="operations_addition_multiplication">+ *</string>
    <string name="operations_multiplication">*</string>
    <string name="digits_from_zero">0…</string>
    <string name="digits_from_one">1…</string>
    <string name="digits_primes">Primes</string>
    <string name="digits_fibonacci">Fibonacci</string>
    <string name="digits_padovan">Padovan</string>
    <string name="digits_from_minus_two">-2…</string>
    <string name="digits_from_minus_five">-5…</string>
    <string name="new_grid_shape_square">Square</string>
    <string name="new_grid_shape_rectangular">Rectangular</string>
    <string name="new_grid_shape_size_square">Size: %1$d</string>
    <string name="new_grid_shape_size_rectangular">Size: %1$d x %2$d</string>
    <string name="new_game_activity_start_new_game">Start New Game</string>
    <string name="new_grid_game_options">Game options</string>
    <string name="new_grid_options_basic_options">Basic</string>
    <string name="new_grid_options_advanced_options">Advanced</string>
    <string name="save_game_action_load">Load</string>
    <string name="save_game_action_delete">Delete</string>
    <string name="hint_as_toast_undo_last_step">Undo</string>
    <string name="new_grid_preview_banner_already_calculated">Preview</string>
    <string name="new_grid_preview_banner_still_calculating">Preview...</string>

    <plurals name="toast_mistakes">
        <item quantity="one">1 mistake</item>
        <item quantity="other">%d mistakes</item>
    </plurals>
    <plurals name="toast_filled">
        <item quantity="one">1 filled cell</item>
        <item quantity="other">%d filled cells</item>
    </plurals>
    <string name="setting_pencil_at_start_summary_on">Begin with filled pencil marks</string>
    <string name="setting_pencil_at_start_summary_off">Empty pencil marks at start</string>
    <string name="game_erase_selected_cell">Erase Cell</string>
    <string name="main_activity_manu_item_swap_key_pad">Swap key pad</string>
    <string name="main_activity_manu_item_undo_one_step">Undo</string>
    <string name="main_activity_current_game_saved">Game saved successfully.</string>
    <string name="load_game_screen_app_bar_button_delete_all">Delete All</string>
    <string name="main_screen_label_fast_finishing_mode_active">Fast Finishing Mode</string>
    <string name="setting_flag_use_fast_finishing_mode_title">[Beta!] Use Fast Finishing Mode</string>
    <string name="setting_flag_use_fast_finishing_mode_summary_on">At the end of the game, enter numbers directly by tapping on single pencil marks</string>
    <string name="setting_flag_use_fast_finishing_mode_summary_off">Keep filling single pencil marks as number via long tapping</string>
    <string name="main_screen_label_fast_finishing_mode_deactivate_button">Close</string>
    <string name="numeral_system_label">Numeral System</string>
    <string name="chip_label_numeral_system_binary">Binary</string>
    <string name="chip_label_numeral_system_decimal">Decimal</string>
    <string name="chip_label_numeral_system_quaternary">Quaternary</string>
    <string name="chip_label_numeral_system_octal">Octal</string>
    <string name="chip_label_numeral_system_hexa_decimal">Hexadecimal</string>
    <string name="new_grid_options_number_options">Numbers</string>
    <string name="dialog_reset_statistics_title">Reset statistics?</string>
    <string name="dialog_reset_statistics_msg">All statistics will be deleted</string>
    <string name="difficulty_no_difficulty_calculated_for_game_variant">The difficulty levels of this game variant have not been calculated yet.</string>
    <string name="gridSizeInfo">%1$d x %2$d</string>
    <string name="game_difficulty_level_unknown_bound_at_start_or_end_of_range">-</string>
    <string name="setting_fill_single_cages_at_start_title">Fill single cages at start</string>
    <string name="setting_fill_single_cages_at_start_summary_on">Single cages will be filled automatically.</string>
    <string name="setting_fill_single_cages_at_start_summary_off">Single cages will be left empty</string>
    <string name="statistics_diagram_difficulty">Difficulty</string>
    <string name="statistics_diagram_duration">Duration</string>
</resources>
