<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/statsscroller"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context=".ui.StatisticsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/statscontainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/recordgames"
            style="@style/TextAppearance.Material3.HeadlineMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/stats_puzzles_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/labelOverallDifficulty"
            style="@style/TextAppearance.Material3.HeadlineSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/statistics_diagram_difficulty"
            app:layout_constraintTop_toBottomOf="@id/recordgames"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.patrykandpatrick.vico.views.chart.CartesianChartView
            android:id="@+id/overallDifficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:horizontalLayout="fullWidth"
            app:layers="line"
            app:showBottomAxis="false"
            app:showStartAxis="true"
            app:layout_constraintTop_toBottomOf="@id/labelOverallDifficulty"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/label_overall_duration"
            style="@style/TextAppearance.Material3.HeadlineSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/statistics_diagram_duration"
            app:layout_constraintTop_toBottomOf="@id/overallDifficulty"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.patrykandpatrick.vico.views.chart.CartesianChartView
            android:id="@+id/overallDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:horizontalLayout="fullWidth"
            app:layers="line"
            app:showBottomAxis="false"
            app:showStartAxis="true"
            app:layout_constraintTop_toBottomOf="@id/label_overall_duration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/labelNoStatisticsAvailableYet"
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="Sobald sie ein Spiel abgeschlossen haben, sind hier Diagramme zu sehen."
            app:layout_constraintTop_toBottomOf="@id/recordgames"
            app:layout_constraintBottom_toTopOf="@id/statsOverallBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:drawableTopCompat="@drawable/chart_bell_curve_cumulative"
            android:minLines="3"
            />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierAfterOverallContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="overallDuration,labelNoStatisticsAvailableYet"
            />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/statsOverallBox"
            style="?attr/materialCardViewFilledStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/barrierAfterOverallContent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <TableRow>

                    <TextView
                        android:id="@+id/startedgames"
                        style="@style/TextAppearance.Material3.LabelLarge"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/stats_puzzles_started" />

                    <TextView
                        android:id="@+id/startedstat"
                        android:layout_width="0dp"
                        android:layout_weight="1" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/hintedgames"
                        style="@style/TextAppearance.Material3.LabelLarge"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/stats_puzzles_hinted" />

                    <TextView
                        android:id="@+id/hintedstat"
                        android:layout_width="0dp"
                        android:layout_weight="1" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/solvedgames"
                        style="@style/TextAppearance.Material3.LabelLarge"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/stats_puzzles_solved" />

                    <TextView
                        android:id="@+id/solvedstat"
                        android:layout_width="0dp"
                        android:layout_weight="1" />
                </TableRow>

                <TableRow>

                    <TextView
                        style="@style/TextAppearance.Material3.LabelLarge"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/stats_puzzles_solved_streak" />

                    <TextView
                        android:id="@+id/solvedstreak"
                        android:layout_width="0dp"
                        android:layout_weight="1" />
                </TableRow>

                <TableRow>

                    <TextView
                        style="@style/TextAppearance.Material3.LabelLarge"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/stats_puzzles_longest_streak" />

                    <TextView
                        android:id="@+id/longeststreak"
                        android:layout_width="0dp"
                        android:layout_weight="1" />
                </TableRow>
            </TableLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clearstats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/stats_clear"
            app:layout_constraintTop_toBottomOf="@id/statsOverallBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
